--- a/example/package.json
+++ b/example/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mk-component": "^1.0.36",
+    "mk-aar-form": "^1.0.0",
+    "mk-component": "^1.0.37",
     "mk-meta-engine": "^1.0.60",
-    "mk-utils": "^1.0.45",
+    "mk-rc-select": "^1.0.4",
+    "mk-utils": "^1.0.49",
     "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
@@ -29,15 +31,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.0",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.2",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
